# histr

./: .gitignore  Cargo.toml  Justfile  README.md  pyproject.toml
crates/histr/: Cargo.toml
crates/histr-o3/: Cargo.toml
crates/histr-o3/src/: lib.rs
crates/histr/src/: axis.rs  bin.rs  binnings.rs  h1.rs  lib.rs
python/: __init__.py
python/histr/: __init__.py
src/: axis.rs  bin.rs  binnings.rs  h1.rs  lib.rs
tests/: test_h1.py
