[project]
name = "histr"
requires-python = ">=3.10"
version = "0.0.1"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"   

[tool.maturin]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]
manifest-path = "crates/histr-o3/Cargo.toml"
python-source = "python"
module-name = "histr._histr"

[tool.uv]
dev-dependencies = [
    "ipython>=8.28.0",
]
